Shortcut for edit #101

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -295,7 +295,7 @@
 				</div>
 				<div class="grid">
 					<div class="div1">
-						<p class="text3 text">Web</p>
+						<p class="text3 text">Edit</p>
 					</div>
 					<div class="div2">
 						<input class="input1" disabled type="text" id="hk3_input" />
@@ -746,12 +746,6 @@
 
 			<!-- experimental -->
 			<div id="experimental" class="tabcontent">
-				<h3>Edit codes</h3>
-				<p class="text3">Edit your saved codes. You can edit, delete or add more codes.</p>
-				<button class="button1" id="but14" onclick="edit()">Open</button>
-				<p class="unstable">This feature is WIP! It might be unstable or buggy!</p>
-				<br />
-				<hr />
 				<h3>Codes time offset</h3>
 				<p class="text3">
 					You can set a time offset for the codes, submit with enter. Specify the time in seconds, it can be a positive or a negative
