Display build number and new workflows

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -8,12 +8,20 @@
 		<script defer src="./src/js/keys.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
-		<link rel="stylesheet" href="../../src/tailwind@2.1.2.css" />
+		<link rel="stylesheet" href="../../src/tailwind@2.2.2.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<div class="w-full text-white bg-black font-bold build">
+			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+				<div class="flex">
+					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+				</div>
+			</div>
+		</div>
+
 		<div class="w-full text-white bg-popup-red font-bold offline">
 			<div class="container flex flex-row items-center justify-between px-6 py-4 mx-auto">
 				<div class="flex">
