Support, fix dialogs, update notification

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -657,7 +657,7 @@
 						</div>
 						<div class="grid">
 							<div class="div1">
-								<p class="text3 text">Issues</p>
+								<p class="text3 text">Support</p>
 							</div>
 							<div class="div2">
 								<input class="input1" disabled type="text" id="hk7_input" />
