--- a/app/application/index.html
+++ b/app/application/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<title>Authme</title>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
-		<link rel="stylesheet" href="../.././src/animate@2.4.1.css" />
-		<link rel="stylesheet" href="../../src/tailwind@2.2.2.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/animate.css" />
+		<link rel="stylesheet" href="../../src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- js -->
-		<script defer src="../.././src/scroll-out@2.2.12.js"></script>
+		<script defer src="../.././src/scrollout.js"></script>
 		<script defer src="./src/js/convert.js"></script>
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/save.js"></script>
