--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -7,8 +7,8 @@
 		<script defer src="./src/js/index.js"></script>
 		<script defer src="./src/js/keys.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
-		<link rel="stylesheet" href="../../src/tailwind@2.2.2.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../../src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
