--- a/app/import/index.html
+++ b/app/import/index.html
@@ -8,7 +8,7 @@
 		<script defer src="./src/js/qr.js"></script>
 		<script defer src="./src/js/ga.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
