Small improvemetns, update dialogs

--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -251,8 +251,8 @@
 						<button class="button1" id="but5" onclick="names()">-</button>
 						<br />
 						<hr />
-						<h3>Reveal code</h3>
-						<p class="text3">Blurs the code, but you can still copy it. Needs restart.</p>
+						<h3>Blur code</h3>
+						<p class="text3">Blurs the code, but you can still copy it or hover over it to reveal. Needs restart.</p>
 						<button class="button1" id="but11" onclick="reveal()">-</button>
 						<br />
 						<hr />
