--- a/app/import/index.html
+++ b/app/import/index.html
@@ -54,7 +54,7 @@
 							<a href="#qrLink" onclick="qrLink()">Detailed steps</a>
 						</p>
 					</details>
-					<button class="buttonm" id="but0" onclick="qr_import()">
+					<button class="buttonm" id="but0" onclick="qrImport()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 							<path
 								stroke-linecap="round"
@@ -73,7 +73,8 @@
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
 						<p class="text3">
-							Take a picture of the export QR code(s), transfer them on your computer, and choose the image(s) you transfered.
+							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the
+							image(s) you transfered.
 							<br />
 							<br />
 							If you need more steps or help:
@@ -82,7 +83,7 @@
 							<a href="#gaLink" onclick="gaLink()">Detailed steps</a>
 						</p>
 					</details>
-					<button class="buttonm" id="but1" onclick="ga_import()">
+					<button class="buttonm" id="but1" onclick="gaImport()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 512 512" fill="currentColor">
 							<path
 								d="M473.16 221.48l-2.26-9.59H262.46v88.22H387c-12.93 61.4-72.93 93.72-121.94 93.72-35.66 0-73.25-15-98.13-39.11a140.08 140.08 0 01-41.8-98.88c0-37.16 16.7-74.33 41-98.78s61-38.13 97.49-38.13c41.79 0 71.74 22.19 82.94 32.31l62.69-62.36C390.86 72.72 340.34 32 261.6 32c-60.75 0-119 23.27-161.58 65.71C58 139.5 36.25 199.93 36.25 256s20.58 113.48 61.3 155.6c43.51 44.92 105.13 68.4 168.58 68.4 57.73 0 112.45-22.62 151.45-63.66 38.34-40.4 58.17-96.3 58.17-154.9 0-24.67-2.48-39.32-2.59-39.96z"
