--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -21,7 +21,17 @@
 			<h1>Authme</h1>
 			<h2>Edit</h2>
 			<p class="text3">You can edit, delete or add more codes.</p>
-			<button class="button1" onclick="hide()">Close</button>
+			<button class="buttonm" onclick="hide()">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+					/>
+				</svg>
+				Close window
+			</button>
 			<!-- rollback -->
 			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 rollback">
 				<h2 id="rollbackBut" class="pt-3">Rollback</h2>
