Redesigned codes and save #119

--- a/app/application/index.html
+++ b/app/application/index.html
@@ -192,8 +192,27 @@
 				<br />
 			</div>
 			<br />
-			<div class="save_container flex justify-center">
-				<button class="button1 button" id="save" onclick="save()">Save codes</button>
+			<div class="save_container flex justify-center" id="save">
+				<div class="mx-auto rounded-2xl bg-gray-800 mb-8 w-2/3">
+					<h3 class="pt-3">Do you want to save your code(s)?</h3>
+					<h4>Save your code(s) to your computer.</h4>
+					<div class="flex flex-row items-center justify-center">
+						<div class="gap-3">
+							<button class="buttonm" onclick="save()">
+								<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+									<path
+										stroke-linecap="round"
+										stroke-linejoin="round"
+										stroke-width="2"
+										d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
+									/>
+								</svg>
+								Save code(s)
+							</button>
+						</div>
+					</div>
+					<br />
+				</div>
 			</div>
 			<br />
 			<div class="search_container">
