--- a/app/application/index.html
+++ b/app/application/index.html
@@ -194,8 +194,8 @@
 			<br />
 			<div class="save_container flex justify-center" id="save">
 				<div class="mx-auto rounded-2xl bg-gray-800 mb-8 w-2/3">
-					<h3 class="pt-3">Do you want to save your code(s)?</h3>
-					<h4>Save your code(s) to your computer.</h4>
+					<h3 class="pt-3">Save code(s)</h3>
+					<h4>Save your code(s) to your computer for future use.</h4>
 					<div class="flex flex-row items-center justify-center">
 						<div class="gap-3">
 							<button class="buttonm" onclick="save()">
