--- a/app/import/index.html
+++ b/app/import/index.html
@@ -8,7 +8,8 @@
 		<script defer src="./src/js/qr.js"></script>
 		<script defer src="./src/js/ga.js"></script>
 		<!-- css -->
-		<link rel="stylesheet" href="../.././src/dragonfly@1.4.0.css" />
+		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../../src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
@@ -18,43 +19,90 @@
 			<h1>Authme</h1>
 			<h2>Import</h2>
 			<p class="text3">You can import from QR code(s) and Google Authenticator QR code(s).</p>
-			<button class="button1" onclick="hide()">Close</button>
+			<button class="buttonm" onclick="hide()">
+				<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path
+						stroke-linecap="round"
+						stroke-linejoin="round"
+						stroke-width="2"
+						d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+					/>
+				</svg>
+				Close window
+			</button>
 
-			<h2>Instructions</h2>
-
-			<details class="details1" open>
-				<summary class="summary1">Getting started</summary>
-				<p class="text3">
-					If you don't know what to do please read the documentation and come back here. Recommended for most users:
-					<br />
-					<a href="#" onclick="link0()">Authme Import Documentation</a>
-				</p>
-			</details>
+			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
+				<h2 class="pt-3">Instructions</h2>
+				<h3>If you don't know what to do please read the documentation and come back here!</h3>
+				<button class="buttonm" id="but0" onclick="onlineDocs()">
+					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9"
+						/>
+					</svg>
+					Read docs
+				</button>
+				<br />
+			</div>
 
 			<div class="choose">
-				<h2 id="choose">Import</h2>
-				<p class="text3">QR code(s)</p>
-				<details class="details1" id="dt">
-					<summary class="summary1">Instructions</summary>
-					<p class="text3">
-						This option don't requires anything special.
-						<br />
-						Just screenshot the QR code(s) and import them.
-					</p>
-				</details>
-				<button class="button1" id="but0" onclick="qr_import()">Import from QR code(s)</button>
-				<br />
-				<h2 id="choose">Advanced import</h2>
-				<p class="text3">Google Authenticator QR code(s)</p>
-				<details class="details1" id="dt">
-					<summary class="summary1">Instructions</summary>
-					<p class="text3">
-						This option requires Python. Please check: Top Menu > Info > About.
-						<br />
-						If you see "Not installed" install Python, restart the app and come back here.
-					</p>
-				</details>
-				<button class="button1" id="but0" onclick="ga_import()">Import from Google Authenticator QR code(s)</button>
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
+					<h2 class="pt-3">Import</h2>
+					<h3>QR code(s)</h3>
+					<details class="details1" id="dt">
+						<summary class="summary1">Instructions</summary>
+						<p class="text3">
+							Just screenshot the QR code(s) you want to import, save them on your computer, and choose the image(s) you saved.
+							<br />
+							<br />
+							If you need more steps or help:
+							<br />
+							<br />
+							<a href="#qrLink" onclick="qrLink()">Detailed steps</a>
+						</p>
+					</details>
+					<button class="buttonm" id="but0" onclick="qrImport()">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								stroke-width="2"
+								d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"
+							/>
+						</svg>
+						Choose image(s)
+					</button>
+					<br />
+				</div>
+				<div class="mx-auto rounded-2xl bg-gray-800 w-2/3 mb-20" id="choose">
+					<h2 class="pt-3">Advanced import</h2>
+					<h3>Google Authenticator QR code(s)</h3>
+					<details class="details1" id="dt">
+						<summary class="summary1">Instructions</summary>
+						<p class="text3">
+							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the
+							image(s) you transfered.
+							<br />
+							<br />
+							If you need more steps or help:
+							<br />
+							<br />
+							<a href="#gaLink" onclick="gaLink()">Detailed steps</a>
+						</p>
+					</details>
+					<button class="buttonm" id="but1" onclick="gaImport()">
+						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 512 512" fill="currentColor">
+							<path
+								d="M473.16 221.48l-2.26-9.59H262.46v88.22H387c-12.93 61.4-72.93 93.72-121.94 93.72-35.66 0-73.25-15-98.13-39.11a140.08 140.08 0 01-41.8-98.88c0-37.16 16.7-74.33 41-98.78s61-38.13 97.49-38.13c41.79 0 71.74 22.19 82.94 32.31l62.69-62.36C390.86 72.72 340.34 32 261.6 32c-60.75 0-119 23.27-161.58 65.71C58 139.5 36.25 199.93 36.25 256s20.58 113.48 61.3 155.6c43.51 44.92 105.13 68.4 168.58 68.4 57.73 0 112.45-22.62 151.45-63.66 38.34-40.4 58.17-96.3 58.17-154.9 0-24.67-2.48-39.32-2.59-39.96z"
+							/>
+						</svg>
+						Choose image(s)
+					</button>
+					<br />
+				</div>
 			</div>
 		</div>
 	</body>
