Bug fixes, small improvements

--- a/app/edit/index.html
+++ b/app/edit/index.html
@@ -16,6 +16,16 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<!-- build number -->
+		<div class="w-full text-white bg-black font-bold build">
+			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+				<div class="flex">
+					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- content -->
 		<div class="center">
 			<!-- header -->
 			<h1>Authme</h1>
@@ -73,7 +83,7 @@
 								d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"
 							/>
 						</svg>
-						Save code(s)
+						Save modification(s)
 					</button>
 					<button class="buttonm mb-4" onclick="addMore()">
 						<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
