--- a/app/import/index.html
+++ b/app/import/index.html
@@ -15,6 +15,16 @@
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<!-- build number -->
+		<div class="w-full text-white bg-black font-bold build">
+			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+				<div class="flex">
+					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- content -->
 		<div class="center">
 			<h1>Authme</h1>
 			<h2>Import</h2>
@@ -83,8 +93,8 @@
 					<details class="details1" id="dt">
 						<summary class="summary1">Instructions</summary>
 						<p class="text3">
-							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the
-							image(s) you transfered.
+							Take a picture of the export QR code(s) in your Google Authenticator app, transfer them on your computer, and choose the image(s)
+							you transfered.
 							<br />
 							<br />
 							If you need more steps or help:
