Redesigned confirm window #125

--- a/app/confirm/index.html
+++ b/app/confirm/index.html
@@ -7,20 +7,71 @@
 		<script defer src="./src/js/index.js"></script>
 		<!-- css -->
 		<link rel="stylesheet" href="../.././src/dragonfly.css" />
+		<link rel="stylesheet" href="../.././src/tailwind.css" />
 		<link rel="stylesheet" href="./src/css/index.css" />
 		<!-- favicon -->
 		<link rel="shortcut icon" href="../../img/icon.ico" type="image/x-icon" />
 	</head>
 	<body>
+		<!-- build number -->
+		<div class="w-full text-white bg-black font-bold build">
+			<div class="container flex flex-row items-center justify-center px-6 py-2 mx-auto">
+				<div class="flex">
+					<p class="mx-3 flex flex-row build-content">You are running a pre release version of Authme!</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- content -->
 		<div class="center">
 			<h1>Authme</h1>
-			<h2>Welcome back!</h2>
-			<h3 id="text">Please enter your password to countine to your 2FA codes!</h3>
-			<label for="password_input" id="password_label">Password</label>
-			<br />
-			<input class="input1" type="password" name="password" id="password_input" />
-			<br />
-			<button class="button1" onclick="unhash_password()" id="button1">Confirm</button>
+			<div class="mx-auto rounded-2xl bg-gray-800 w-2/3" id="choose">
+				<h3 class="pt-3">Welcome back!</h3>
+				<h4 id="text">Please enter your password to countine!</h4>
+				<div class="flex flex-col justify-center items-center">
+					<label class="mb-1" id="password_label1">Password</label>
+					<input class="input1" type="password" id="password_input" spellcheck="false" />
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="h-6 w-6 relative -top-9 cursor-pointer left-32"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke="black"
+						id="show_pass_0"
+					>
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"
+						/>
+					</svg>
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="h-6 w-6 relative -top-9 cursor-pointer left-32 hidden"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke="black"
+						id="show_pass_01"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M13.875 18.825A10.05 10.05 0 0112 19c-4.478 0-8.268-2.943-9.543-7a9.97 9.97 0 011.563-3.029m5.858.908a3 3 0 114.243 4.243M9.878 9.878l4.242 4.242M9.88 9.88l-3.29-3.29m7.532 7.532l3.29 3.29M3 3l3.59 3.59m0 0A9.953 9.953 0 0112 5c4.478 0 8.268 2.943 9.543 7a10.025 10.025 0 01-4.132 5.411m0 0L21 21"
+						/>
+					</svg>
+					<div>
+						<button class="buttonm mb-5" onclick="unhashPassword()">
+							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+							</svg>
+							Confirm
+						</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
